--- a/components/navbar/navbar.less
+++ b/components/navbar/navbar.less
@@ -5,20 +5,20 @@ header.navbar {
     width: 100%;
     background: #627b9e;
     z-index: 1000;
-    height: 41.5px;
+    height: 2.075rem;
     z-index: 10;
 
     .title {
         color: #fff;
         text-shadow: 0 1px 0 black;
-        font-size: 20px;
+        font-size: 1.5rem;
         font-weight: bold;
-        line-height: 42.5px;
+        line-height: 1.0625rem;
         text-align: center;
         display: block;
         position: absolute;
-        left: 40px;
-        right: 40px;
+        left: 1rem;
+        right: 1rem; 
         top: 0;
     }
     .nav {
