--- a/components/navbar/navbar.less
+++ b/components/navbar/navbar.less
@@ -11,7 +11,7 @@ header.navbar {
     .title {
         color: #fff;
         text-shadow: 0 1px 0 black;
-        font-size: 11.5rem;
+        font-size: .5rem;
         font-weight: bold;
         line-height: 1.0625rem;
         text-align: center;
