--- a/components/navbar/navbar.less
+++ b/components/navbar/navbar.less
@@ -5,22 +5,44 @@ header.navbar {
     width: 100%;
     background: #627b9e;
     z-index: 1000;
-    height: 2.075rem;
+    height: 2rem;
     z-index: 10;
 
     .title {
         color: #fff;
         text-shadow: 0 1px 0 black;
-        font-size: .5rem;
+        font-size: 1.2rem;
         font-weight: bold;
-        line-height: 1.0625rem;
+        line-height: 2rem;
         text-align: center;
         display: block;
         position: absolute;
-        left: 1rem;
-        right: 1rem; 
+        left: 2rem;
+        right: 2rem; 
         top: 0;
     }
     .nav {
+        float: left;
+        display: inline-block;
+        text-decoration: none;
+        overflow: hidden;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        -moz-user-select: -moz-none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        width: 2rem;
+        height: 2rem;
+        background: -webkit-linear-gradient(bottom,#78624f,#846f5b);
+        background: -moz-linear-gradient(bottom,#78624f,#846f5b);
+        background: linear-gradient(to top,#78624f,#846f5b);
+        background-size: 1.3rem;
+        background-repeat: no-repeat;
+        background-position: .35rem .35rem;
+        border: 1px solid transparent;
+        position: relative;
+        background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwAgMAAAAqbBEUAAAADFBMVEUAAAD///8AAAD////IZVEZAAAABHRSTlMAAFqzoa8xcgAAAClJREFUKM9jCEUCDFTm1P+Hgr9U52StgoKVSJY6MJLJGXUoDodSPVEAAN65RTMMRcUhAAAAAElFTkSuQmCC);
     }
 }
