--- a/components/navbar/navbar.less
+++ b/components/navbar/navbar.less
@@ -3,13 +3,13 @@ header.navbar {
     top: 0;
     left: 0;
     width: 100%;
-    background: #627b9e;
+    background: #DFDED4;
     z-index: 1000;
     height: 2rem;
     z-index: 10;
 
     .title {
-        color: #fff;
+        color: #D6D3C4;
         text-shadow: 0 1px 0 black;
         font-size: 1.2rem;
         font-weight: bold;
