--- a/components/movie/movies.less
+++ b/components/movie/movies.less
@@ -3,5 +3,10 @@
     margin-top: 2rem;
 
     .movie {
+        text-align: center;
+        padding: 1rem;
+        margin: 1rem;
+        background-color: #FFF;
+        border-radius: 20px;
     }
 }
