--- a/public/css/common/reset.less
+++ b/public/css/common/reset.less
@@ -10,7 +10,7 @@
     // ref: http://www.zhihu.com/question/21093147/answer/17158909
     html {
         color: #000;
-        background: #fff;
+        background: #FAF9F4;
         -webkit-text-size-adjust: 100%;
         -ms-text-size-adjust: 100%;
         text-size-adjust: 100%;
