--- a/components/navbar/navbar.less
+++ b/components/navbar/navbar.less
@@ -3,14 +3,14 @@ header.navbar {
     top: 0;
     left: 0;
     width: 100%;
-    background: #DFDED4;
+    background: #9C6A8D;
     z-index: 1000;
     height: 2rem;
     z-index: 10;
 
     .title {
-        color: #D6D3C4;
-        text-shadow: 0 1px 0 black;
+        color: #fff;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
         font-size: 1.2rem;
         font-weight: bold;
         line-height: 2rem;
