--- a/components/movie/movies.less
+++ b/components/movie/movies.less
@@ -9,4 +9,18 @@
         background-color: #FFF;
         border-radius: 20px;
     }
+    .movie:first-child {
+        margin-top: 0;
+        img {
+        }
+        p {
+            color: #9C6A8D;
+        }
+        .o_title {
+        }
+        .title {
+        }
+        .genres {
+        }
+    }
 }
