--- a/public/css/common/reset.less
+++ b/public/css/common/reset.less
@@ -25,6 +25,8 @@
     // 最佳字体实践
     body {
         font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+
+        overflow-x: hidden;
     }
 
     // 标清 高清屏幕
