--- a/components/navtree/navtree.less
+++ b/components/navtree/navtree.less
@@ -4,7 +4,9 @@
     top: 0;
     left: 0;
     right: 20%;
+    bottom: 0;
     color: #FAF9F4;
+    display: none;
 
     header {
         position: absolute;
