--- a/components/app.less
+++ b/components/app.less
@@ -1,3 +1,9 @@
+.app-wrapper {
+    .main-wrapper {
+        background-color: #FAF9F4;
+    }
+}
+
 .slide-right {
     -webkit-transform: translateX(80%);
     -moz-transform: translateX(80%);
@@ -6,6 +12,7 @@
     transition: transform .4s;
 }
 
-.slide {
-    font-size: 1px;
+.hidden {
+    display: none !important;
+    visibility: hidden !important;
 }
