--- a/components/movie/movies.less
+++ b/components/movie/movies.less
@@ -1,26 +1,44 @@
-.movies {
-    padding-top: 1rem;
-    margin-top: 2rem;
-
-    .movie {
-        text-align: center;
-        padding: 1rem;
-        margin: 1rem;
-        background-color: #FFF;
-        border-radius: 20px;
-        img {
+.movies-wrapper {
+    .banner-unit {
+        article {
+            padding: 2rem 0 0 0;
+            background: #FAF9F4;
         }
-        p {
-            color: #9C6A8D;
-        }
-        .o_title {
-        }
-        .title {
-        }
-        .genres {
+        .top-tips {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            text-align: center;
+            font-size: .5rem;
+            color: #999;
+            height: 2rem;
+            line-height: 2rem;
         }
     }
-    .movie:first-child {
-        margin-top: 0;
+
+    .movies {
+        padding-top: 1rem;
+        .movie {
+            text-align: center;
+            padding: 1rem;
+            margin: 1rem;
+            background-color: #FFF;
+            border-radius: 20px;
+            img {
+            }
+            p {
+                color: #9C6A8D;
+            }
+            .o_title {
+            }
+            .title {
+            }
+            .genres {
+            }
+        }
+        .movie:first-child {
+            margin-top: 0;
+        }
     }
 }
