--- a/components/app.less
+++ b/components/app.less
@@ -9,6 +9,8 @@
     -moz-transform: translateX(80%);
     -ms-transform: translateX(80%);
     transform: translateX(80%);
+    -webkit-transition: -webkit-transform .4s;
+    -moz-transition: -moz-transform .4s;
     transition: transform .4s;
 }
 
