--- a/components/app.less
+++ b/components/app.less
@@ -1,6 +1,10 @@
 .app-wrapper {
     .main-wrapper {
         background-color: #FAF9F4;
+        div {
+            display: block;
+            overflow-y: scroll;
+        }
     }
 }
 
