tree height added

--- a/components/navtree/navtree.less
+++ b/components/navtree/navtree.less
@@ -4,7 +4,6 @@
     top: 0;
     left: 0;
     right: 20%;
-    bottom: 0;
     color: #FAF9F4;
 
     header {
@@ -75,6 +74,11 @@
                     color: #fff;
                     margin-left: .75rem;
                     border-bottom: 1px solid #52B4AF;
+                }
+            }
+            li:last-child {
+                a {
+                    border-bottom: 0px;
                 }
             }
         }
