--- a/components/app.less
+++ b/components/app.less
@@ -14,6 +14,16 @@
     transition: transform .4s;
 }
 
+.slide-back {
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    transform: translateX(0%);
+    -webkit-transition: -webkit-transform .4s;
+    -moz-transition: -moz-transform .4s;
+    transition: transform .4s;
+}
+
 .hidden {
     display: none !important;
     visibility: hidden !important;
