--- a/components/app.less
+++ b/components/app.less
@@ -1,6 +1,13 @@
 .app-wrapper {
     .main-wrapper {
         background-color: #FAF9F4;
+        -webkit-transform-origin: 50% 50% 50%;
+        -moz-transform-origin: 50% 50% 50%;
+        -ms-transform-origin: 50% 50% 50%;
+        transform-origin: 50% 50% 50%;
+        -webkit-transition: -webkit-transform .4s;
+        -moz-transition: -moz-transform .4s;
+        transition: transform .4s;
     }
 }
 
@@ -9,16 +16,6 @@
     -moz-transform: translateX(80%);
     -ms-transform: translateX(80%);
     transform: translateX(80%);
-    -webkit-transition: -webkit-transform .4s;
-    -moz-transition: -moz-transform .4s;
-    transition: transform .4s;
-}
-
-.slide-back {
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    transform: translateX(0%);
     -webkit-transition: -webkit-transform .4s;
     -moz-transition: -moz-transform .4s;
     transition: transform .4s;
